Создание проекта на реакте и начало верстки страничек

--- a/src/components/RegistrationForm.css
+++ b/src/components/RegistrationForm.css
@@ -16,7 +16,7 @@
     background: #1c1c1c;
     border-radius: 12px;
     padding: 30px 35px;
-    box-shadow: 0 6px 20px rgba(0D131B);
+    box-shadow: 0 6px 20px rgba(13, 19, 27, 1);
 }
 
 /* Стили для скрытия стрелок в числовых полях */
