--- a/src/components/LoginForm.css
+++ b/src/components/LoginForm.css
@@ -5,7 +5,7 @@
     align-items: center;
     min-height: calc(100vh - 140px);
     padding: 10px 15px;
-    background-color: #000;
+    background-color: #0D131B;
 }
 
 .login-form-box {
@@ -13,7 +13,7 @@
     background: #1c1c1c;
     border-radius: 12px;
     padding: 30px;
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 6px 20px rgba(13, 19, 27, 1);
 }
 
 .login-form-title {
