--- a/src/components/pages/Login.css
+++ b/src/components/pages/Login.css
@@ -2,7 +2,7 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: #000;
+    background-color: #0D131B;
 }
 
 .main-content {
