--- a/src/components/shared/Buttons/NewAccountButton.css
+++ b/src/components/shared/Buttons/NewAccountButton.css
@@ -1,8 +1,8 @@
 .new-account-button {
     width: 45%;
     padding: 12px;
-    background: #9D2628;
-    color: rgba(255, 255, 255, 0.8);
+    background: #E3FBA7;
+    color: black;
     border: 1px solid transparent;
     border-radius: 6px;
     font-size: 14px;
@@ -36,7 +36,7 @@
 .new-account-icon {
     width: 16px;
     height: 16px;
-    filter: brightness(0) invert(1);
+    filter: brightness(0) invert(0);
 }
 
 .new-account-button:disabled .new-account-icon {
