--- a/src/components/pages/Register.css
+++ b/src/components/pages/Register.css
@@ -1,9 +1,8 @@
-/* src/pages/Register.css */
 .register-page {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background: #000000;
+    background: #0D131B;
 }
 
 .main-content {
@@ -11,4 +10,5 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
